build: swapping jest for karma + add sonar & storybook & storyshot

--- a/package.json
+++ b/package.json
@@ -5,9 +5,17 @@
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build",
-        "test": "ng test",
+        "test": "jest ",
+        "test:watch": "jest --watch",
+        "test:debug": "jest --runInBand",
+        "test:coverage": "jest --coverage",
         "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-        "e2e": "ng e2e"
+        "e2e": "ng e2e",
+        "test:watch": "jest --watch",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook",
+        "sonar-scanner": "node_modules/.bin/sonar-scanner",
+        "sonar": "npm run sonar-scanner"
     },
     "private": true,
     "dependencies": {
@@ -19,7 +27,10 @@
         "@angular/platform-browser": "~9.1.6",
         "@angular/platform-browser-dynamic": "~9.1.6",
         "@angular/router": "~9.1.6",
+        "@briebug/jest-schematic": "^2.1.1",
+        "@storybook/addon-storyshots": "^5.3.18",
         "rxjs": "~6.5.4",
+        "sonarqube-scanner": "^2.6.0",
         "tslib": "^1.10.0",
         "zone.js": "~0.10.2"
     },
@@ -27,11 +38,19 @@
         "@angular-devkit/build-angular": "~0.901.5",
         "@angular/cli": "~9.1.5",
         "@angular/compiler-cli": "~9.1.6",
+        "@babel/core": "^7.9.6",
+        "@storybook/addon-actions": "^5.3.18",
+        "@storybook/addon-links": "^5.3.18",
+        "@storybook/addon-notes": "^5.3.18",
+        "@storybook/addons": "^5.3.18",
+        "@storybook/angular": "^5.3.18",
         "@types/jasmine": "~3.5.0",
         "@types/jasminewd2": "~2.0.3",
+        "@types/jest": "^25.2.2",
         "@types/node": "^12.11.1",
         "@typescript-eslint/eslint-plugin": "^2.34.0",
         "@typescript-eslint/parser": "^2.34.0",
+        "babel-loader": "^8.1.0",
         "codelyzer": "^5.1.2",
         "eslint": "^7.0.0",
         "eslint-config-prettier": "^6.11.0",
@@ -39,16 +58,20 @@
         "husky": "^4.2.5",
         "jasmine-core": "~3.5.0",
         "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~5.0.0",
-        "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage-istanbul-reporter": "~2.1.0",
-        "karma-jasmine": "~3.0.1",
-        "karma-jasmine-html-reporter": "^1.4.2",
+        "jest": "^24.9.0",
+        "jest-preset-angular": "^7.1.1",
+        "jest-sonar-reporter": "^2.0.0",
         "lint-staged": "^10.2.4",
         "prettier": "^2.0.5",
         "protractor": "~5.4.3",
+        "ts-jest": "^26.0.0",
         "ts-node": "~8.3.0",
         "tslint": "~6.1.0",
         "typescript": "~3.8.3"
+    },
+    "jestSonar": {
+        "reportPath": "reports",
+        "reportFile": "test-reporter.xml",
+        "indent": 4
     }
 }
