--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
         "test:coverage": "jest --coverage",
         "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
         "e2e": "ng e2e",
-        "test:watch": "jest --watch",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
         "sonar-scanner": "node_modules/.bin/sonar-scanner",
@@ -39,6 +38,8 @@
         "@angular/cli": "~9.1.5",
         "@angular/compiler-cli": "~9.1.6",
         "@babel/core": "^7.9.6",
+        "@commitlint/cli": "^8.3.5",
+        "@commitlint/config-conventional": "^8.3.4",
         "@storybook/addon-actions": "^5.3.18",
         "@storybook/addon-links": "^5.3.18",
         "@storybook/addon-notes": "^5.3.18",
