chore: fixing paths

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
         "test:watch": "jest --watch",
         "test:debug": "jest --runInBand",
         "test:coverage": "jest --coverage",
+        "test:lib": "jest --config ./jest.lib.config.js",
+        "test:app": "jest --config ./jest.app.config.js",
+        "test:lib:coverage": "jest --coverage --config ./jest.lib.config.js",
+        "test:app:coverage": "jest --coverage --config ./jest.app.config.js",
         "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
         "e2e": "ng e2e",
         "storybook": "start-storybook -p 6006",
@@ -35,6 +39,7 @@
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.901.5",
+        "@angular-devkit/build-ng-packagr": "~0.901.6",
         "@angular/cli": "~9.1.5",
         "@angular/compiler-cli": "~9.1.6",
         "@babel/core": "^7.9.6",
@@ -63,6 +68,7 @@
         "jest-preset-angular": "^7.1.1",
         "jest-sonar-reporter": "^2.0.0",
         "lint-staged": "^10.2.4",
+        "ng-packagr": "^9.0.0",
         "prettier": "^2.0.5",
         "protractor": "~5.4.3",
         "ts-jest": "^26.0.0",
