--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build",
-        "test": "jest ",
+        "test": "jest",
         "test:watch": "jest --watch",
         "test:debug": "jest --runInBand",
         "test:coverage": "jest --coverage",
-        "test:lib": "jest --config ./jest.lib.config.js",
+        "test:lib": "jest --config ./projects/authentication/jest.config.js",
+        "test:lib:coverage": "jest --coverage --config ./projects/authentication/jest.config.js",
         "test:app": "jest --config ./jest.app.config.js",
-        "test:lib:coverage": "jest --coverage --config ./jest.lib.config.js",
-        "test:app:coverage": "jest --coverage --config ./jest.app.config.js",
         "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
         "e2e": "ng e2e",
         "storybook": "start-storybook -p 6006",
