--- a/projects/authentication/tsconfig.spec.json
+++ b/projects/authentication/tsconfig.spec.json
@@ -1,17 +1,10 @@
 {
-  "extends": "../../tsconfig.json",
-  "compilerOptions": {
-    "outDir": "../../out-tsc/spec",
-    "types": [
-      "jasmine",
-      "node"
-    ]
-  },
-  "files": [
-    "src/test.ts"
-  ],
-  "include": [
-    "**/*.spec.ts",
-    "**/*.d.ts"
-  ]
+    "extends": "../../tsconfig.json",
+    "compilerOptions": {
+        "outDir": "../../out-tsc/spec",
+        "types": ["jest", "node"],
+        "emitDecoratorMetadata": true
+    },
+    "files": ["src/test.ts"],
+    "include": ["**/*.spec.ts", "**/*.d.ts"]
 }
