fix: cleaning code

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,19 +7,18 @@ sonar.sources=.
 sonar.exclusions=**/node_modules/**, \
   **/*.spec.ts, \
   **/*.mock.ts, \
-  src/app/**/*.module.ts, \
-  src/app/**/*.stories.ts, \
-  src/app/**/+store/**/*.actions.ts, \
-  src/app/**/+store/**/*.selectors.ts
+  **/*.module.ts, \
+  **/*.stories.ts, \
+  **/*.actions.ts, \
+  **/*.selectors.ts
 
-sonar.coverage.exclusions=**/*.spec.ts, \
-  **/*.mock.ts, \
+sonar.coverage.exclusions=**/*.spec.ts, \ 
   **/*.e2e.ts, \
   **/*.js, \
-  src/app/**/*.module.ts, \
-  src/app/**/*.stories.ts, \
-  src/app/**/+store/**/*.actions.ts, \
-  src/app/**/+store/**/*.selectors.ts
+  **/*.module.ts, \
+  **/*.stories.ts, \
+  **/*.module.ts, \
+  **/*.stories.ts, \
 sonar.test.inclusions=**/*.spec.ts
 sonar.typescript.lcov.reportPaths=reports/lcov.info
 sonar.testExecutionReportPaths=reports/test-reporter.xml
