--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,10 @@
                         "tsConfig": "tsconfig.app.json",
                         "aot": true,
                         "assets": ["src/favicon.ico", "src/assets"],
-                        "styles": ["src/styles.scss"],
+                        "styles": [
+                            "src/styles.scss",
+                            "node_modules/material-design-iconic-font/dist/css/material-design-iconic-font.min.css"
+                        ],
                         "scripts": []
                     },
                     "configurations": {
