--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@angular/router": "~9.1.6",
         "@briebug/jest-schematic": "^2.1.1",
         "@storybook/addon-storyshots": "^5.3.18",
+        "material-design-iconic-font": "^2.2.0",
         "rxjs": "~6.5.4",
         "sonarqube-scanner": "^2.6.0",
         "tslib": "^1.10.0",
