--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-        "build": "ng build",
+        "clean:dist": "rimraf dist",
+        "build:prod": "node_modules/.bin/ng build --aot --prod",
+        "build": "npm run clean:dist && npm run build:prod",
         "test": "jest",
-        "test:watch": "jest --watch",
+        "test:watch": "jest -o --watch",
         "test:debug": "jest --runInBand",
         "test:coverage": "jest --coverage",
-        "test:lib": "jest --config ./projects/authentication/jest.config.js",
-        "test:lib:coverage": "jest --coverage --config ./projects/authentication/jest.config.js",
+        "test:auth:lib": "jest --runInBand --config ./projects/authentication/jest.config.js",
+        "test:auth:coverage": "jest --coverage --config ./projects/authentication/jest.config.js",
+        "test:core:lib": "jest --runInBand --config ./projects/core/jest.config.js",
+        "test:core:coverage": "jest --coverage --config ./projects/core/jest.config.js",
+        "test:shared:lib": "jest --runInBand --config ./projects/shared/jest.config.js",
+        "test:shared:coverage": "jest --coverage --config ./projects/shared/jest.config.js",
         "test:app": "jest --config ./jest.app.config.js",
         "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
         "e2e": "ng e2e",
