--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@angular/platform-browser-dynamic": "~9.1.6",
         "@angular/router": "~9.1.6",
         "@briebug/jest-schematic": "^2.1.1",
+        "@ngrx/store": "^9.1.2",
         "@storybook/addon-storyshots": "^5.3.18",
         "jwt-decode": "^2.2.0",
         "material-design-iconic-font": "^2.2.0",
@@ -45,7 +46,7 @@
         "zone.js": "~0.10.2"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.901.5",
+        "@angular-devkit/build-angular": "^0.901.7",
         "@angular-devkit/build-ng-packagr": "~0.901.6",
         "@angular/cli": "~9.1.5",
         "@angular/compiler-cli": "~9.1.6",
