refactor: fixing auth redirect

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@angular/router": "~9.1.6",
         "@briebug/jest-schematic": "^2.1.1",
         "@ngrx/effects": "^9.1.2",
+        "@ngrx/router-store": "^9.1.2",
         "@ngrx/store": "^9.1.2",
         "@storybook/addon-storyshots": "^5.3.18",
         "jwt-decode": "^2.2.0",
@@ -54,6 +55,7 @@
         "@babel/core": "^7.9.6",
         "@commitlint/cli": "^8.3.5",
         "@commitlint/config-conventional": "^8.3.4",
+        "@ngrx/store-devtools": "^9.1.2",
         "@storybook/addon-actions": "^5.3.18",
         "@storybook/addon-links": "^5.3.18",
         "@storybook/addon-notes": "^5.3.18",
