--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
         "build:prod": "node_modules/.bin/ng build --aot --prod",
         "build": "npm run clean:dist && npm run build:prod",
         "test": "jest",
-        "test:watch": "jest -o --watch",
         "test:debug": "jest --runInBand",
         "test:coverage": "jest --coverage",
         "test:auth:lib": "jest --runInBand --config ./projects/authentication/jest.config.js",
@@ -17,6 +16,8 @@
         "test:core:coverage": "jest --coverage --config ./projects/core/jest.config.js",
         "test:shared:lib": "jest --runInBand --config ./projects/shared/jest.config.js",
         "test:shared:coverage": "jest --coverage --config ./projects/shared/jest.config.js",
+        "test:i18n:lib": "jest --runInBand --config ./projects/internationalization/jest.config.js",
+        "test:i18n:coverage": "jest --coverage --config ./projects/internationalization/jest.config.js",
         "test:app": "jest --config ./jest.app.config.js",
         "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
         "e2e": "ng e2e",
