--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
             "@assets/*": ["src/assets/*"],
             "@authentication/*": ["projects/authentication/src/lib/*"],
             "@core/*": ["projects/core/src/lib/*"],
-            "@shared/*": ["projects/shared/src/lib/*"]
+            "@shared/*": ["projects/shared/src/lib/*"],
+            "@i18n/*": ["projects/internationalization/src/lib/*"]
         }
     },
     "angularCompilerOptions": {
