--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "moduleResolution": "node",
         "esModuleInterop": true,
         "importHelpers": true,
+        "resolveJsonModule": true,
         "target": "es2015",
         "lib": ["es2018", "dom"],
         "paths": {
