refactor: refactoring code

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "@storybook/addon-storyshots": "^5.3.18",
     "angular-notifier": "^6.0.1",
+    "bootstrap": "^4.5.0",
     "jasmine-marbles": "^0.6.0",
     "jwt-decode": "^2.2.0",
     "material-design-iconic-font": "^2.2.0",
