--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
                             "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
                             "src/styles.scss",
                             "src/assets/styles/theme.scss",
-                            "node_modules/material-design-iconic-font/dist/css/material-design-iconic-font.min.css"
+                            "node_modules/material-design-iconic-font/dist/css/material-design-iconic-font.min.css",
+                            "node_modules/bootstrap/dist/css/bootstrap.min.css"
                         ],
 
                         "scripts": []
