--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,21 +1,27 @@
 #----- Default SonarQube server
-sonar.host.url=http://localhost:9000
+sonar.host.url=http://localhost:8800
 sonar.projectKey=Shoppable
 sonar.projectName=Shoppable
 sonar.projectVersion=1.0
 sonar.sources=.
+sonar.inclusions=**/*.ts
 sonar.exclusions=**/node_modules/**, \
   **/*.spec.ts, \
   **/*.module.ts, \
+  **/*.mock.ts, \
   **/*.stories.ts, \
+  projects/**/+store/**/*.actions.ts, \
+  projects/**/+store/**/*.selectors.ts
 
 sonar.coverage.exclusions=**/*.spec.ts, \ 
   **/*.e2e.ts, \
   **/*.js, \
   **/*.module.ts, \
+  **/*.spec.ts, \
+  **/*.mock.ts, \
   **/*.stories.ts, \
-  **/*.module.ts, \
-  **/*.stories.ts, \
+  projects/**/+store/**/*.actions.ts, \
+  projects/**/+store/**/*.selectors.ts
 sonar.test.inclusions=**/*.spec.ts
 sonar.typescript.lcov.reportPaths=reports/lcov.info
 sonar.testExecutionReportPaths=reports/test-reporter.xml
