--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
             "@authentication/*": ["projects/authentication/src/lib/*"],
             "@core/*": ["projects/core/src/lib/*"],
             "@shared/*": ["projects/shared/src/lib/*"],
-            "@i18n/*": ["projects/internationalization/src/lib/*"]
+            "@i18n/*": ["projects/internationalization/src/lib/*"],
+            "@dash/*": ["projects/dashboard/src/lib/*"]
         }
     },
     "angularCompilerOptions": {
