refactor: refactoring code

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@angular/common": "~9.1.6",
         "@angular/compiler": "~9.1.6",
         "@angular/core": "~9.1.6",
+        "@angular/fire": "^6.0.0",
         "@angular/forms": "~9.1.6",
         "@angular/localize": "~9.1.6",
         "@angular/material": "^9.2.4",
@@ -56,6 +57,7 @@
         "angular-notifier": "^6.0.1",
         "animate-sass": "^0.8.2",
         "bootstrap": "^4.5.0",
+        "firebase": "^7.15.1",
         "jasmine-marbles": "^0.6.0",
         "jquery": "^3.5.1",
         "jwt-decode": "^2.2.0",
