--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
             "@shared/*": ["projects/shared/src/lib/*"],
             "@i18n/*": ["projects/internationalization/src/lib/*"],
             "@dash/*": ["projects/dashboard/src/lib/*"],
-            "@product/*": ["projects/product/src/lib/*"]
+            "@product/*": ["projects/product/src/lib/*"],
+            "@store/*": ["projects/store/src/lib/*"]
         }
     },
     "angularCompilerOptions": {
