--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
             "@core/*": ["projects/core/src/lib/*"],
             "@shared/*": ["projects/shared/src/lib/*"],
             "@i18n/*": ["projects/internationalization/src/lib/*"],
-            "@dash/*": ["projects/dashboard/src/lib/*"],
+            "@admin/*": ["projects/admin/src/lib/*"],
             "@product/*": ["projects/product/src/lib/*"],
             "@store/*": ["projects/store/src/lib/*"],
             "@layout/*": ["projects/layout/src/lib/*"]
