feat(conf): add optimazation conf

--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
         "sonar-scanner": "node_modules/.bin/sonar-scanner",
-        "sonar": "npm run sonar-scanner"
+        "sonar": "npm run sonar-scanner",
+        "optimizecss": "gulp --gulpfile build-scripts/optimiez-css.gulpfile.js"
     },
     "private": true,
     "dependencies": {
+        "@angular-builders/custom-webpack": "^9.2.0",
         "@angular/animations": "~9.1.6",
         "@angular/cdk": "^9.2.4",
         "@angular/common": "~9.1.6",
@@ -60,6 +62,12 @@
         "animate-sass": "^0.8.2",
         "bootstrap": "^4.5.0",
         "firebase": "^7.15.1",
+        "gulp": "^4.0.2",
+        "gulp-brotli": "^3.0.0",
+        "gulp-clean": "^0.4.0",
+        "gulp-filter": "^6.0.0",
+        "gulp-gzip": "^1.4.2",
+        "gulp-purify-css": "^0.1.0",
         "jasmine-marbles": "^0.6.0",
         "jquery": "^3.5.1",
         "jwt-decode": "^2.2.0",
@@ -92,7 +100,9 @@
         "@typescript-eslint/eslint-plugin": "^2.34.0",
         "@typescript-eslint/parser": "^2.34.0",
         "babel-loader": "^8.1.0",
+        "brotli-webpack-plugin": "^1.1.0",
         "codelyzer": "^5.1.2",
+        "compression-webpack-plugin": "^4.0.0",
         "eslint": "^7.0.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-prettier": "^3.1.3",
