--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,9 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
+                        "customWebpackConfig": {
+                            "path": "./custom-webpack.config.js"
+                        },
                         "outputPath": "dist/Shoppable",
                         "index": "src/index.html",
                         "main": "src/main.ts",
