--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
             "@admin/*": ["projects/admin/src/lib/*"],
             "@product/*": ["projects/product/src/lib/*"],
             "@store/*": ["projects/store/src/lib/*"],
-            "@layout/*": ["projects/layout/src/lib/*"]
+            "@layout/*": ["projects/layout/src/lib/*"],
+            "@home/*": ["projects/home/src/lib/*"]
         }
     },
     "angularCompilerOptions": {
